welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: value =! is not a member of Int
while(nbPas=!zero) {
           ^