welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int = 0
var zero:Int=0
while(!estSurBiscuit) {
	avance();
	nbPas = nbPas + 1;
}
while(nbPas=!zero) {
	recule()
	nbPas = nbPas - 1
}
